# gix_dll

./: .clangd  CMakeLists.txt  build.sh  configure.sh  test.sh
src/: CMakeLists.txt  gix_dll.c
src/include/gix_dll/: gix_dll.h
tests/: CMakeLists.txt  gdll_test.c
